# tdb-gui-rs

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: sidebar.tsx
src/pages/: new-conn.tsx  welcome.tsx
